--- a/style/index.css
+++ b/style/index.css
@@ -1,22 +1,40 @@
+@font-face {
+    font-family: 'Raleway Light';
+    src: url('fonts/Raleway-Light.ttf');
+}
+
+@font-face {
+    font-family: 'Raleway Bold';
+    src: url('fonts/Raleway-Bold.ttf');
+}
+
 html,
 body {
-  font-size: 15px;
-  height: 100%;
-  margin: 0;
+	font-size: 17px;
+	height: 100%;
+	margin: 0;
 }
 
 body {
-  font-family: "Open Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-  background: #F1F1F1;
-  margin: 0px;
-  padding: 0px;
-  color: #555555;
-  text-rendering: optimizeLegibility;
-  min-width: 320px;
+	font-family: 'Raleway Light';
+  	background: #F1F1F1;
+  	margin: 0px;
+  	padding: 0px;
+  	color: #555555;
+  	text-rendering: optimizeLegibility;
+  	min-width: 320px;
+}
+
+a:link {
+    color: #555555;
 }
 
 img {
 	margin: auto;
+}
+
+h1, h3 {
+	font-family: 'Raleway Bold';
 }
 
 .container {
