--- a/style/index.css
+++ b/style/index.css
@@ -1,13 +1,3 @@
-@font-face {
-    font-family: 'Raleway Light';
-    src: url('fonts/Raleway-Light.ttf');
-}
-
-@font-face {
-    font-family: 'Raleway Bold';
-    src: url('fonts/Raleway-Bold.ttf');
-}
-
 html,
 body {
 	font-size: 17px;
@@ -16,7 +6,7 @@ body {
 }
 
 body {
-	font-family: 'Raleway Light';
+  font-family: 'Source Sans Pro', sans-serif;
   	background: #F1F1F1;
   	margin: 0px;
   	padding: 0px;
@@ -34,7 +24,7 @@ img {
 }
 
 h1, h3 {
-	font-family: 'Raleway Bold';
+  font-weight: bold;
 }
 
 .container {
@@ -62,4 +52,12 @@ only screen and (min-resolution: 2dppx) {
 	.wip-display {
 		max-width: 30%;
 	}
+}
+
+.small {
+  line-height: 30%;
+}
+
+.big {
+  line-height: normal;
 }
