Fixed font file extension parrello/parrello.github.io#1

--- a/src/scss/_webfonts.scss
+++ b/src/scss/_webfonts.scss
@@ -3,7 +3,7 @@
     src: url("../fonts/optician-sans.eot");
     src:
         url("../fonts/optician-sans.ttf") format("truetype"),
-        url("../fonts/optician-sans.ttf") format("woff");
+        url("../fonts/optician-sans.woff") format("woff");
     font-style: normal;
 }
 
